--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
+      <img src="gifka.gif" alt="Прикольная Gifka">
     </section>
 
     <footer class="page-footer">
