Расположение Гифки по центру

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
           <h3>Блог начинающего верстальщика</h3>
             <p>Статический блог про обучение HTML и CSS.</p> 
-            <img src="img/gifka.gif" alt="Прикольная Gifka">     
+            <img align="center" src="img/gifka.gif" alt="Прикольная Gifka">     
     </section>
 
     <footer class="page-footer">
