Дополнение к темной теме и добавление "Мои навыки"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img src="files/user.jpg" width="500" alt="Мое фото">
+        <img class="avatar" src="files/user.jpg" width="500" alt="Мое фото">
       </figure>
       <h3>Пара слов обо мне</h3>
       <p>В скором или дальнем будущем буду GuryDeveloper</p>
@@ -32,25 +32,36 @@
       <p>Могу быть полезным в верстке, так же знаком с CMS такими как: wordpress, bitrix, joomla, cetera. Так же знаком с git.</p>
     </section>
 
+      <div class="skills">
+          <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level"><div style="width: 60%;">60%</div></dd>
+            <dt class="skill-css">CSS</dt>
+            <dd class="level"><div style="width: 40%;">40%</div></dd>
+          </dl>
+      </div>
+
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
 
+      <figure class="project-image">
+        <img src="files/project.jpg" width="800" alt="Сайт Черный">
+      </figure>
+
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг.</p>
-            <figure class="project-image">
-                  <img src="files/project.jpg" width="800" alt="Сайт Черный">
-            </figure>
-      
-          <h3>Блог начинающего верстальщика</h3>
-            <p>Статический блог про обучение HTML и CSS.</p> 
-            <img align="center" src="img/gifka.gif" alt="Прикольная Gifka">     
+
+      <h3>Блог начинающего верстальщика</h3>
+      <p>Статический блог про обучение HTML и CSS.</p>
+      <img align="center" src="img/gifka.gif" alt="Прикольная Gifka">
     </section>
 
     <footer class="page-footer">
   <div class="container">
     <a class="footer-email" href="mailto:vyacheslavdmitrov@gmail.com">vyacheslavdmitrov@gmail.com</a>
     <a class="footer-phone" href="tel:+380714190719">+38(071) 419 07 19</a>
-    <a class="footer-phone" href="tel:+380714190719">+38(066) 977 26 33</a>
+    <a class="footer-phone" href="tel:+380669772633">+38(066) 977 26 33</a>
   </div>
 </footer>
   </body>
