Добавил номер в header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="container">
     <a class="header-email" href="mailto:vyacheslavdmitrov@gmail.com">vyacheslavdmitrov@gmail.com</a>
     <a class="header-phone" href="tel:+380714190719">+38(071) 419 07 19</a>
+    <a class="footer-phone" href="tel:+380669772633">+38(066) 977 26 33</a>
   </div>
 </header>
 
