--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img class="avatar" src="files/user.jpg" width="500" alt="Мое фото">
+        <img class="avatar" href="https://vk.com/slavkadmitrov" src="files/user.jpg" width="500" alt="Мое фото">
       </figure>
       <h3>Пара слов обо мне</h3>
       <p>В скором или дальнем будущем буду GuryDeveloper</p>
