--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <a href="https://vk.com/slavkadmitrov"><img class="avatar" src="files/user.jpg" width="500" alt="Мое фото"></a>
+        <a href="sample.html"><img class="avatar" src="files/user.jpg" width="500" alt="Мое фото"></a>
       </figure>
       <h3>Пара слов обо мне</h3>
       <p>В скором или дальнем будущем буду GuryDeveloper</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Могу быть полезным в верстке, так же знаком с CMS такими как: wordpress, bitrix, joomla, cetera. Так же знаком с git.</p>
+      <h3>Чем могу быть полезен?</h3>
+      <p>Могу быть полезным в верстке, также знаком с CMS такими как: wordpress, bitrix, joomla, cetera. Так же знаком с git.</p>
     </section>
 
       <div class="skills">
