Ссылка на vk.com

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <a href="sample.html"><img class="avatar" src="files/user.jpg" width="500" alt="Мое фото"></a>
+        <a href="https://vk.com/slavkadmitrov"><img class="avatar" src="files/user.jpg" width="500" alt="Мое фото"></a>
       </figure>
       <h3>Пара слов обо мне</h3>
       <p>В скором или дальнем будущем буду GuryDeveloper</p>
