Редактирование разметки фото

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
-      <figure class="user-image">
+      <!-- <figure class="user-image"> -->
         <a href="https://vk.com/slavkadmitrov"><img class="avatar" src="files/user.jpg" width="500" alt="Мое фото"></a>
-      </figure>
+      <!-- </figure> -->
       <h3>Пара слов обо мне</h3>
       <p>В скором или дальнем будущем буду GuryDeveloper</p>
       <h3>Чем могу быть полезен?</h3>
@@ -46,12 +46,11 @@
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
 
-      <figure class="project-image">
-        <img src="files/project.jpg" width="800" alt="Сайт Черный">
-      </figure>
-
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг.</p>
+      <!-- <figure class="project-image"> -->
+        <img src="files/project.jpg" height="150%" alt="Сайт Черный">
+      <!-- </figure> -->
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
