link for Barbershop Borodinsky

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a class="header-email" href="mailto:vyacheslavdmitrov@gmail.com">vyacheslavdmitrov@gmail.com</a>
     <a class="header-phone" href="tel:+380714190719">+38(071) 419 07 19</a>
     <a class="footer-phone" href="tel:+380669772633">+38(066) 977 26 33</a>
+    <a class="footer-phone" href="tel:+79289012500">+7 928 901 25 00</a>
   </div>
 </header>
 
@@ -52,6 +53,8 @@
         <img src="files/project.jpg" height="150%" alt="Сайт Черный">
       <!-- </figure> -->
 
+      <p>Сайт <a href="https://vyacheslavdmitrov.github.io/barbershop/">Барбершоп "Бородинский"</a> в разработке</p>
+
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       <img align="center" src="img/gifka.gif" alt="Прикольная Gifka">
@@ -62,6 +65,7 @@
     <a class="footer-email" href="mailto:vyacheslavdmitrov@gmail.com">vyacheslavdmitrov@gmail.com</a>
     <a class="footer-phone" href="tel:+380714190719">+38(071) 419 07 19</a>
     <a class="footer-phone" href="tel:+380669772633">+38(066) 977 26 33</a>
+    <a class="footer-phone" href="tel:+79289012500">+7 928 901 25 00</a>
   </div>
 </footer>
   </body>
