link website kitty

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <h2 class="subheading">Мои работы</h2>
 
       <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг.</p>
+      <p>Небольшой лендинг. Нажми на скриншот Лендинга.</p>
       <!-- <figure class="project-image"> -->
-        <img src="files/project.jpg" height="150%" alt="Сайт Черный">
+        <a src="https://vyacheslavdmitrov.github.io/kitty/"><img src="files/project.jpg" height="150%" alt="Сайт Черный"></a>
       <!-- </figure> -->
         <p></p>
       <p>Сайт <a href="https://vyacheslavdmitrov.github.io/barbershop/">Барбершоп "Бородинский"</a> в разработке</p>
