SWAP src on href AND add h3

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг. Нажми на скриншот Лендинга.</p>
       <!-- <figure class="project-image"> -->
-        <a src="https://vyacheslavdmitrov.github.io/kitty/"><img src="files/project.jpg" height="150%" alt="Сайт Черный"></a>
+        <a href="https://vyacheslavdmitrov.github.io/kitty/"><img src="files/project.jpg" height="150%" alt="Сайт Черный"></a>
       <!-- </figure> -->
         <p></p>
-      <p>Сайт <a href="https://vyacheslavdmitrov.github.io/barbershop/">Барбершоп "Бородинский"</a> в разработке</p>
+        <h3>Сайт Барбершоп "Бородинский"</h3>
+      <p>Сайт <a href="https://vyacheslavdmitrov.github.io/barbershop/">в разработке</a></p>
         <p></p>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
