--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- </figure> -->
         <p></p>
         <h3>Сайт Барбершоп "Бородинский"</h3>
-      <p>Сайт <a href="https://vyacheslavdmitrov.github.io/barbershop/">в разработке</a></p>
+      <p><a href="https://vyacheslavdmitrov.github.io/barbershop/">Так-то в разработке</a></p>
         <p></p>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
