--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>В скором или дальнем будущем буду GuryDeveloper</p>
       <h3>Чем могу быть полезен?</h3>
       <p>Могу быть полезным в верстке, также знаком с CMS такими как: wordpress, bitrix, joomla, cetera. Так же знаком с git.</p>
-      <p><img src="img/gifka.gif" height="150%" alt="Вулкан Иджен"></a></p>
+      <p><img src="img/idjen.gif" height="150%" alt="Вулкан Иджен"></a></p>
     </section>
 
       <div class="skills">
