add link for site sedona

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <h3>Сайт Барбершоп "Бородинский"</h3>
       <p><a href="https://vyacheslavdmitrov.github.io/barbershop/">Так-то в разработке</a></p>
         <p></p>
+        <h3>Сайт Портфолио: Седона</h3>
+      <p><a href="https://vyacheslavdmitrov.github.io/sedona/"><img src="files/projectsedona.jpg" height="150%" alt="Сайт Черный"></a></p>
+      <p>Лучший проект на данный момент</p>
+
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       <img align="center" src="img/gifka.gif" alt="Прикольная Gifka">
