add size for screen

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2 class="subheading">Мои работы</h2>
 
       <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг. Нажми на скриншот Лендинга.</p>
+      <p>Небольшой лендинг. Нажми на скриншот, что бы перейти на сайт.</p>
       <!-- <figure class="project-image"> -->
         <a href="https://vyacheslavdmitrov.github.io/kitty/"><img src="files/project.jpg" height="150%" alt="Сайт Черный"></a>
       <!-- </figure> -->
@@ -57,6 +57,7 @@
       <p><a href="https://vyacheslavdmitrov.github.io/barbershop/">Так-то в разработке</a></p>
         <p></p>
         <h3>Сайт Портфолио: Седона</h3>
+        <p>Нажми на скриншот, что бы перейти на сайт.</p>
       <p><a href="https://vyacheslavdmitrov.github.io/sedona/"><img src="files/projectsedona.jpg" height="150%" alt="Сайт Черный"></a></p>
       <p>Лучший проект на данный момент</p>
 
