add size for screen sedona

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p></p>
         <h3>Сайт Портфолио: Седона</h3>
         <p>Нажми на скриншот, что бы перейти на сайт.</p>
-      <p><a href="https://vyacheslavdmitrov.github.io/sedona/"><img src="files/projectsedona.jpg" height="150%" alt="Сайт Черный"></a></p>
+        <p><a href="https://vyacheslavdmitrov.github.io/sedona/"><img src="files/projectsedona.jpg" width="45%" alt="Сайт Черный"></a></p>
       <p>Лучший проект на данный момент</p>
 
       <h3>Блог начинающего верстальщика</h3>
